@@ -17,11 +17,15 @@ external libraries:
   - libFLAC, which itself depends on libogg.
     If libogg is installed, default configuration for FLAC is with Ogg support.
   - libsox, a general-purpose audio format converter
-  - libiberty.a if --enable-iberty-build is not used and if it is installed in a system path, and if
+  - libiberty.a if --enable-libiberty-build is not used and if it is installed in a system path, and if
     there is no SoX bug (see file BUGS )
 
 Building dvdauthor requests linking to libpng12, libxml2 and libz, as well as bison and flex.
-Building lplex requests linking to libdvdread(-dev) and libFLAC++, using g++, as well as a recent wxWidget installation.
+Buildinf mpegtools requests version 6b of the libmpeg IJG library. See package for details; this library is
+commonly provided by most *nix platforms.
+Building lplex requests linking to libdvdread(-dev) and libFLAC++, using g++, which is provided by
+the --enable-flac-build option. Lplex also requests a recent wxWidget installation (recommended build of
+source code, version 2.9.5)
 
 For menu authoring, add the following executables:
 
@@ -32,15 +36,13 @@ For menu authoring, add the following executables:
   - a52dec (for video top menu conversion into audio top menu)
 
 A patched version of mkisofs is needed to create an ISO image file that is DVD-Audio compliant.
+This patch is automatically generated on building with --enable-cdrtools-build at configure stage.
 cdrecord or growisofs are advised for burning the ISO, though other tools can be used.
 
 To generate the documentation, you will need help2man for the man page and man2html
 for the html man page. If these applications are installed, the autotools building
-system automatically creates them. The Code::Blocks project also has a script for
-generating these pages. Most *nix platforms propose these tools. Currently source
-code for man2html is hosted by http://savannah.nongnu.org/projects/man2html and source
-code for help2man is hosted by http://ftp.gnu.org/gnu/help2man. You may need to install
-Perl to run man2html.
+system automatically creates them. Note that this package uses a special version of man2html, not the broken perl
+package still available on the Savannah repository. See package man2html for details. 
 
 This version will use either libiberty.a if already installed on your platform
 or source code for a few GNU libc functions located in libiberty/ The list of functions
@@ -68,11 +70,11 @@ the minimal set of requirements under a "bare" Linux 13.04 platforms seems to be
   
   lplex support : add: g++, wxWidgets (2.9.2+), libxml2, libz, libFLAC-dev,libFLAC++-dev, libogg-dev, libdvdread
   
-  sox support: possible links to audio libraries installed on the system, libltl and libz,
+  sox support: possible links to audio libraries installed on the system, libltl and libz. If the sox library is not available on
+  your system, building sox will require the autotools: autoconf, automake, libtool(ize) as it is necessary to redesign an unsatisfactory
+  configure.ac file (broken pkg-config design).
   
-  menu authoring : add: automake, autoconf, libtool, bison, flex.
-  
-To build lplex, a prior system installation of libFLAC seems preferable.
+  menu authoring, dvdauthor : add: automake, autoconf, libtool(ize), bison, flex.
   
 
 2. Building tools
@@ -84,5 +86,7 @@ script: these include building tools such as:
 sed, patch, tar, autoconf, automake, m4, libtool, make, perl, gcc, g++ (the linker), curl and
 ideally smake for building cdrecord. flex and bison are used by dvdauthor.
 
-Other building tools may be needed for specific features, take care to check configuration
-messages (in config.log or in the make run output).
+Other building tools may be needed for specific features, take care to check configuration output messages, make run messages
+and ultimately the config.log file generated by the configure script.
+It is advised to build and install wx-widgets version 2.9.2+ from source code prior to building dvda-author if you are to build lplex
+in the process.
